# pyrustify

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CD.yml  CI.yml
src/: lib.rs  settings.rs  utils.rs
src/misc/: mod.rs  role_accounts.json
src/mx/: mod.rs
src/smtp/: mod.rs
src/smtp/providers/: mod.rs  yahoo.rs
