[package]
name = "pyrustify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrustify"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
trust-dns-resolver = "0.22"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
email_address="0.2.4"
async-smtp = { version = "0.6.0", features = ["socks5"] }
tokio = { version = "1", features = ["full"] }
async-native-tls = { version = "0.4", default-features = false }